k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contact-record
  namespace: contact-record
spec:
  ingressClassName: nginx
  rules:
    - host: contact-record.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
